tests/NormalTests/paczka1/fuzzy1/66202923.err
Error in line 7: FgiN A155 57,1
Error in line 15: YvycLDM A155 57,2
Error in line 20: YvycLDM S708 98,8
Error in line 22: YvycLDM A155 69,9
Error in line 23: YvycLDM S280 26,6
Error in line 25: YvycLDM A155 17,2
Error in line 38: 0sdM4A2 S708 40,3
Error in line 39: 0sdM4A2 A155 48,9
